<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_name"
            android:hint="@string/your_name"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_address"
            android:hint="@string/your_address"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_update"
        android:text="@string/update"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:fontFamily="monospace"
        android:layout_above="@id/txt_skip"
        android:backgroundTint="@color/colorButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="ObsoleteLayoutParam" />

</LinearLayout>