<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorHomeBackground"
    android:orientation="vertical"
    tools:context=".Fragments.HomeFragment">
    <LinearLayout
        android:id="@+id/layout_user_information"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:padding="8dp"
        android:background="@color/colorButton"
        android:weightSum="4"
        >

        <ImageView
            android:src="@drawable/ic_account_circle_white_24dp"
            android:layout_width="50dp"
            android:layout_height="50dp" />

        <LinearLayout
            android:layout_marginStart="8dp"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_user_name"
                android:text="Kim Yongdae"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/txt_member_type"
                android:text="Normal"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:weightSum="4"
            android:padding="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_booking"
                android:layout_marginEnd="8dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:src="@drawable/ic_event_note_black_24dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="50dp"
                        android:layout_height="50dp" />

                    <TextView
                        android:text="Booking"
                        android:fontFamily="@font/bellerose"
                        android:layout_gravity="center_horizontal"
                        android:textSize="@dimen/textCardSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_cart"
                android:layout_marginEnd="8dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp">

                <RelativeLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.nex3z.notificationbadge.NotificationBadge
                        android:id="@+id/notification_badge"
                        android:layout_toRightOf="@+id/txt_cart_title"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        app:nbMaxTextLength="2"
                        >
                    </com.nex3z.notificationbadge.NotificationBadge>

                    <ImageView
                        android:id="@+id/card_icon"
                        android:src="@drawable/ic_shopping_cart_black_24dp"
                        android:layout_centerHorizontal="true"
                        android:layout_width="50dp"
                        android:layout_height="50dp" />

                    <TextView
                        android:id="@+id/txt_cart_title"
                        android:layout_below="@+id/card_icon"
                        android:text="Cart"
                        android:fontFamily="@font/bellerose"
                        android:layout_centerHorizontal="true"
                        android:textSize="@dimen/textCardSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_history"
                android:layout_marginEnd="8dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:src="@drawable/ic_history_black_24dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="50dp"
                        android:layout_height="50dp" />

                    <TextView
                        android:text="History"
                        android:fontFamily="@font/bellerose"
                        android:layout_gravity="center_horizontal"
                        android:textSize="@dimen/textCardSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_notify"
                android:layout_marginEnd="8dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:src="@drawable/ic_notifications_black_24dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="50dp"
                        android:layout_height="50dp" />

                    <TextView
                        android:text="Notification"
                        android:fontFamily="@font/bellerose"
                        android:layout_gravity="center_horizontal"
                        android:textSize="@dimen/textCardSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_booking_info"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="8dp"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:padding="8dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:src="@drawable/ic_event_note_black_24dp"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:text="Your Booking Information"
                        android:layout_marginStart="8dp"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:fontFamily="@font/bellerose"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/address_bullet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/txt_salon_address"
                        android:text=" Address Salon"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/time_bullet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/txt_time"
                        android:text=" Time"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/stylelist_bullet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/txt_salon_barber"
                        android:text=" David"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/bullet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/txt_time_remain"
                        android:text=" David"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btn_change_booking"
                        android:layout_marginTop="4dp"
                        android:layout_marginRight="4dp"
                        android:text="CHANGE"
                        android:layout_weight="1"
                        android:background="@drawable/button_border_bg"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />

                    <Button
                        android:id="@+id/btn_delete_booking"
                        android:layout_marginTop="4dp"
                        android:layout_marginRight="4dp"
                        android:text="DELETE"
                        android:layout_weight="1"
                        android:background="@drawable/button_border_bg"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:padding="8dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ss.com.bannerslider.Slider
            android:id="@+id/banner_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:padding="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:text="Look Book"
                android:textSize="18sp"
                android:fontFamily="@font/bellerose"
                android:textColor="@color/colorButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_look_book"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>